[gd_scene load_steps=2 format=3 uid="uid://d8k4x2m9n7p5q"]

[ext_resource type="Script" path="res://scripts/UpgradeChoice.gd" id="1_upgrade"]

[node name="UpgradeChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upgrade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP! Choose an Upgrade:"
horizontal_alignment = 1

[node name="UpgradeButtons" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Button1" type="Button" parent="Panel/MarginContainer/VBoxContainer/UpgradeButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade 1"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer/UpgradeButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade 2"

[node name="Button3" type="Button" parent="Panel/MarginContainer/VBoxContainer/UpgradeButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade 3"
